# rust-buildkite

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
api_examples/annotations/: create.rs
api_examples/artifacts/: get.rs
api_examples/cluster_queues/: pause.rs
api_examples/cluster_tokens/: update.rs
api_examples/clusters/: create.rs
api_examples/package_registries/: create.rs
api_examples/pipeline_templates/: delete.rs
api_examples/pipelines/: create.rs
api_examples/test_runs/: get.rs
buildkite/: schema.json
examples/api/annotations/: list_by_build.rs
examples/api/artifacts/: list.rs
examples/api/cluster_queues/: delete.rs  get.rs  list.rs  update.rs
examples/api/package_registries/: get.rs
examples/api/pipeline_templates/: list.rs
examples/api/pipelines/: list.rs  update.rs
examples/api/rate_limits/: get.rs
examples/builds/: get.rs
examples/cluster_queues/: create.rs  resume.rs
examples/cluster_tokens/: create.rs  delete.rs  get.rs  list.rs
examples/clusters/: delete.rs  get.rs  list.rs  update.rs
examples/flaky_tests/: list.rs
examples/package_registries/: delete.rs  list.rs  list_packages.rs
examples/pipeline/bazel/: .bazelrc  MODULE.bazel  pipeline.rs
examples/pipeline/bazel/cpp/: BUILD  hello-fail.cc  hello-lib.cc  hello-world.cc
examples/pipeline/builder/: dynamic_pipeline.rs
examples/pipeline/macro/: dynamic_pipeline.rs
examples/pipeline/registry/: main.rs
examples/pipeline/script/: dynamic_pipeline.rs
examples/pipeline_templates/: create.rs  get.rs  update.rs
examples/test_runs/: list.rs
examples/test_suites/: create.rs  delete.rs  get.rs  list.rs  update.rs
examples/tests/: get.rs
pipeline_examples/: dynamic_pipeline.rs
rust-buildkite-macros/: Cargo.toml  build.rs  fetch_protos.sh  protodep.toml
rust-buildkite-macros/src/: bazel.rs  bep.rs  buildkite_conditional.rs  debug.rs  lib.rs  targets.rs
rust-buildkite-validation/: Cargo.toml
rust-buildkite-validation/src/: lib.rs
rust-buildkite-validation/src/bazel/: flags.rs  labels.rs  mod.rs  targets.rs
src/: client.rs  error.rs  lib.rs  registry.rs  types.rs  validation.rs  webhook.rs
src/bazel/: mod.rs
src/services/: access_tokens.rs  agents.rs  annotations.rs  artifacts.rs  builds.rs  cluster_queues.rs  cluster_tokens.rs  clusters.rs  flaky_tests.rs  jobs.rs  mod.rs  organizations.rs  package_registries.rs  packages.rs  pipeline_templates.rs  pipelines.rs  rate_limit.rs  team_members.rs  team_pipelines.rs  team_suites.rs  teams.rs  test_runs.rs  test_suites.rs  tests.rs  user.rs
tests/: access_tokens_test.rs  agents_test.rs  allow_dependency_failure_test.rs  allowed_teams_test.rs  annotations_test.rs  artifacts_test.rs  automatic_retry_test.rs  block_step_test.rs  branches_test.rs  build_notify_test.rs  builds_test.rs  cache_test.rs  cancel_on_build_failing_test.rs  client_test.rs  cluster_queues_test.rs  cluster_tokens_test.rs  clusters_test.rs  command_step_command_test.rs  command_step_retry_test.rs  command_step_test.rs  depends_on_list_test.rs  depends_on_test.rs  fields_test.rs  flaky_tests_test.rs  if_changed_test.rs  input_step_test.rs  jobs_test.rs  matrix_element_test.rs  matrix_test.rs  misc_test.rs  notify_basecamp_test.rs  notify_email_test.rs  notify_github_check_test.rs  notify_github_commit_status_test.rs  notify_pagerduty_test.rs  notify_slack_object_test.rs  notify_slack_test.rs  notify_webhook_test.rs  organizations_test.rs  package_registries_test.rs  (+23 more)
tests/client/: access_tokens_test.rs  agents_test.rs  annotations_test.rs  artifacts_test.rs  builds_test.rs  client_test.rs  cluster_queues_test.rs  cluster_tokens_test.rs  clusters_test.rs  flaky_tests_test.rs  jobs_test.rs  misc_test.rs  mod.rs  organizations_test.rs  package_registries_test.rs  packages_test.rs  pipeline_templates_test.rs  pipelines_test.rs  providers_test.rs  rate_limits_test.rs  team_members_test.rs  team_pipelines_test.rs  team_suites_test.rs  teams_test.rs  test_runs_test.rs  test_suites_test.rs  tests_test.rs  user_test.rs  webhook_test.rs
tests/common/: mod.rs
tests/pipeline/: agents_test.rs  allow_dependency_failure_test.rs  allowed_teams_test.rs  automatic_retry_test.rs  block_step_test.rs  branches_test.rs  build_notify_test.rs  cache_test.rs  cancel_on_build_failing_test.rs  command_step_command_test.rs  command_step_retry_test.rs  command_step_test.rs  common.rs  depends_on_list_test.rs  depends_on_test.rs  fields_test.rs  group_step_test.rs  if_changed_test.rs  input_step_test.rs  matrix_element_test.rs  matrix_test.rs  mod.rs  notify_basecamp_test.rs  notify_email_test.rs  notify_github_check_test.rs  notify_github_commit_status_test.rs  notify_pagerduty_test.rs  notify_slack_object_test.rs  notify_slack_test.rs  notify_webhook_test.rs  pipeline_serialization_test.rs  pipeline_test.rs  plugins_test.rs  select_field_option_test.rs  select_field_test.rs  skip_test.rs  soft_fail_test.rs  text_field_test.rs  trigger_step_test.rs  wait_step_test.rs
tests/pipeline/macro/: bazel_test.rs  cmd_test.rs  macro_test.rs  mod.rs  parity.rs  registry_test.rs
tests/ui/: bazel_comptime_const.rs  bazel_empty_command.rs  bazel_empty_command.stderr  bazel_invalid_target_pattern.rs  bazel_invalid_target_pattern.stderr  bazel_invalid_verb.rs  bazel_invalid_verb.stderr  bazel_runtime_skips_validation.rs  cmd_not_in_allowlist.rs  cmd_not_in_allowlist.stderr  missing_absolute_path.rs  missing_absolute_path.stderr  missing_implicit_relative_path.rs  missing_implicit_relative_path.stderr  missing_relative_path.rs  missing_relative_path.stderr  raw_string_rejected.rs  raw_string_rejected.stderr  register_on_struct.rs  register_on_struct.stderr  register_unknown_attr.rs  register_unknown_attr.stderr  undefined_env_var.rs  undefined_env_var.stderr  undefined_variable.rs  undefined_variable.stderr
