[package]
name = "rust-buildkite"
version = "0.1.0"
edition = "2024"

[features]
default = []
bazel = ["rust-buildkite-macros/bazel", "starlark"]

[dependencies]
async-trait = "0.1"
inventory = "0.3"
regress = "0.10"
rust-buildkite-macros = { path = "rust-buildkite-macros" }
starlark = { version = "0.13", optional = true }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.5"

# Compile-time macros for host command detection
crabtime = "1.1"

[build-dependencies]
prettyplease = "0.2.37"
schemars = "0.8"
serde_json = "1.0.149"
syn = "2.0.114"
typify = { git = "https://github.com/zachgrayio/typify", branch = "mixed-types-and-refs" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
trybuild = "1.0"
wiremock = "0.6"

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"

[[test]]
name = "client"
path = "tests/client/mod.rs"

[[test]]
name = "pipeline"
path = "tests/pipeline/mod.rs"

[[test]]
name = "ui"
path = "tests/ui.rs"

[[example]]
name = "pipelines-list"
path = "examples/api/pipelines/list.rs"

[[example]]
name = "pipelines-create"
path = "examples/api/pipelines/create.rs"

[[example]]
name = "builds-get"
path = "examples/api/builds/get.rs"

[[example]]
name = "annotations-create"
path = "examples/api/annotations/create.rs"

[[example]]
name = "annotations-list-by-build"
path = "examples/api/annotations/list_by_build.rs"

[[example]]
name = "clusters-create"
path = "examples/api/clusters/create.rs"

[[example]]
name = "pipelines-update"
path = "examples/api/pipelines/update.rs"

[[example]]
name = "clusters-list"
path = "examples/api/clusters/list.rs"

[[example]]
name = "clusters-get"
path = "examples/api/clusters/get.rs"

[[example]]
name = "clusters-update"
path = "examples/api/clusters/update.rs"

[[example]]
name = "clusters-delete"
path = "examples/api/clusters/delete.rs"

[[example]]
name = "cluster-tokens-list"
path = "examples/api/cluster_tokens/list.rs"

[[example]]
name = "cluster-tokens-get"
path = "examples/api/cluster_tokens/get.rs"

[[example]]
name = "cluster-tokens-create"
path = "examples/api/cluster_tokens/create.rs"

[[example]]
name = "cluster-tokens-update"
path = "examples/api/cluster_tokens/update.rs"

[[example]]
name = "cluster-tokens-delete"
path = "examples/api/cluster_tokens/delete.rs"

[[example]]
name = "cluster-queues-list"
path = "examples/api/cluster_queues/list.rs"

[[example]]
name = "cluster-queues-get"
path = "examples/api/cluster_queues/get.rs"

[[example]]
name = "cluster-queues-create"
path = "examples/api/cluster_queues/create.rs"

[[example]]
name = "cluster-queues-update"
path = "examples/api/cluster_queues/update.rs"

[[example]]
name = "cluster-queues-delete"
path = "examples/api/cluster_queues/delete.rs"

[[example]]
name = "cluster-queues-pause"
path = "examples/api/cluster_queues/pause.rs"

[[example]]
name = "cluster-queues-resume"
path = "examples/api/cluster_queues/resume.rs"

[[example]]
name = "artifacts-list"
path = "examples/api/artifacts/list.rs"

[[example]]
name = "artifacts-get"
path = "examples/api/artifacts/get.rs"

[[example]]
name = "flaky_tests-list"
path = "examples/api/flaky_tests/list.rs"

[[example]]
name = "rate_limits-get"
path = "examples/api/rate_limits/get.rs"

[[example]]
name = "tests-get"
path = "examples/api/tests/get.rs"

[[example]]
name = "test_runs-get"
path = "examples/api/test_runs/get.rs"

[[example]]
name = "test_runs-list"
path = "examples/api/test_runs/list.rs"

[[example]]
name = "test_suites-list"
path = "examples/api/test_suites/list.rs"

[[example]]
name = "test_suites-create"
path = "examples/api/test_suites/create.rs"

[[example]]
name = "test_suites-get"
path = "examples/api/test_suites/get.rs"

[[example]]
name = "test_suites-update"
path = "examples/api/test_suites/update.rs"

[[example]]
name = "test_suites-delete"
path = "examples/api/test_suites/delete.rs"

[[example]]
name = "package-registries-list"
path = "examples/api/package_registries/list.rs"

[[example]]
name = "package-registries-get"
path = "examples/api/package_registries/get.rs"

[[example]]
name = "packages-get"
path = "examples/api/packages/get.rs"

[[example]]
name = "pipeline-templates-list"
path = "examples/api/pipeline_templates/list.rs"

[[example]]
name = "pipeline-templates-get"
path = "examples/api/pipeline_templates/get.rs"

[[example]]
name = "packages-create"
path = "examples/api/packages/create.rs"

[[example]]
name = "packages-create-presigned"
path = "examples/api/packages/create_presigned_upload.rs"

[[example]]
name = "dynamic-pipeline-builder"
path = "examples/pipeline/builder/dynamic_pipeline.rs"

[[example]]
name = "dynamic-pipeline-macro"
path = "examples/pipeline/macro/dynamic_pipeline.rs"

[[example]]
name = "dynamic-pipeline-script"
path = "examples/pipeline/script/dynamic_pipeline.rs"

[[example]]
name = "bazel"
path = "examples/pipeline/bazel/pipeline.rs"
required-features = ["bazel"]

[[example]]
name = "pipeline-registry"
path = "examples/pipeline/registry/main.rs"
