[package]
name = "rust-buildkite-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for type-safe Buildkite pipeline DSL"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

bashrs = "6.53"

prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
tonic = { version = "0.13", optional = true }
starlark = { version = "0.13", optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }
tonic-build = { version = "0.13", optional = true }

[features]
default = []
bazel = ["prost", "prost-types", "tonic", "prost-build", "tonic-build", "starlark"]
